--- a/usual-way/index.html
+++ b/usual-way/index.html
@@ -1,9 +1,16 @@
 <html>
 
 <head>
+    <meta charset="UTF-8" />
+    <meta name="theme-color" content="#E41021" />
+    <title>Responsive footer</title>
+    <link rel="shortcut icon" href="img/favicon.png" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/reset.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,15 +21,16 @@
     <fac-footer class="fac-footer">
         <div class="fac-footer-block">
             <div class="fac-footer-block__box pequeno">
+               <img src="img/white-logo.png">
                 <p>Inaugurada em 09 de maio de 2015, a Kazanto vem se destacando por trazer para Manaus produtos originais, variados e de qualidade. Na Kazanto, sempre tem novidade chegando!</p>
             </div>
             <div class="fac-footer-block__box grande">
                 <div class="fac-footer-block__box__mult-content">
                     <div class="info__desc__news">
-                        <p class="fac-footer__text__title">INSCREVA-SE E RECEBA NOVIDADES!</p>
+                        <h2 class="fac-footer__text__title">INSCREVA-SE E RECEBA NOVIDADES!</h2>
                         <form class="subscribe--news">
                             <div class="box_subscribe__field__email">
-                                <input class="subscribe__field" type="email" id="mail" name="mail" value="" placeholder="Digite seu email"/>
+                                <input class="subscribe__field" type="email" id="mail" name="mail" value="" placeholder="Digite seu email" />
                             </div>
                             <button class="subscribe__btn" type="Submit">QUERO RECEBER NOVIDADES!</button>
                         </form>
@@ -37,12 +45,12 @@
                     prévio. Pode ocorrer divergência entre o preço exibido no
                     detalhe do produto e preço apresentado na Sacola de
                     Compras. Em caso de divergência de preços no site, o valor
-                    válido é o da Sacola de Compras</p>
+                    válido é o da Sacola de Compras.</p>
             </div>
             <div class="fac-footer-block__box grande">
                 <div class="fac-footer-block__box__mult-content">
                     <div class="box__mult-content__content">
-                        <p class="fac-footer__text__title">Formas de Pagamento</p>
+                        <h2 class="fac-footer__text__title">Formas de Pagamento</h2>
                         <div class="box__mult-content__media">
                             <img class="pgt-media__img--md" src="img/pgt-1.png">
                             <img class="pgt-media__img--lg" src="img/pgt-2.png">
@@ -50,7 +58,7 @@
                         </div>
                     </div>
                     <div class="box__mult-content__content">
-                        <p class="fac-footer__text__title">Segurança</p>
+                        <h2 class="fac-footer__text__title">Segurança</h2>
                         <div class="box__mult-content__media">
                             <img src="img/logo-letsencrypt.png">
                         </div>
@@ -64,15 +72,15 @@
                     <img class="social__logo" src="img/wp-logo.png" />
                     <div>
                         <div class="social__text">
-                            <p class="fac-footer__text__title">WHATSAPP</p>
-                            <p>(92) 98153-6426</p>
+                            <h2 class="fac-footer__text__title">WHATSAPP</h2>
+                            <a><p>(92) 98153-6426</p></a>
                         </div>
                     </div>
                 </div>
                 <div class="fac-footer-block__box__social">
                     <img class="social__logo" src="img/email-logo.png" />
                     <div class="social__text">
-                        <p class="fac-footer__text__title">EMAIL</p>
+                        <h2 class="fac-footer__text__title">EMAIL</h2>
                         <p>SAC@KAZANTO.COM.BR</p>
                     </div>
 
@@ -80,7 +88,7 @@
             </div>
             <div class="fac-footer-block__box fac-footer-block__box--about">
                 <div class="fac-footer-block__box__text-about">
-                    <p class="fac-footer__text__title">QUEM SOMOS</p>
+                    <h2 class="fac-footer__text__title">INSTITUCIONAL</h2>
                     <div class="text-info__body">
                         <p>QUEM SOMOS</p>
                         <p>ONDE ENCONTRAR</p>
@@ -88,7 +96,7 @@
                     </div>
                 </div>
                 <div class="fac-footer-block__box__text-about">
-                    <p class="fac-footer__text__title">INFORMAÇÕES</p>
+                    <h2 class="fac-footer__text__title">INFORMAÇÕES</h2>
                     <div class="text-info__body">
                         <p>POLÍTICA DE TROCA</p>
                         <p>POLÍTICA DE ENTREGA</p>
@@ -96,7 +104,7 @@
                     </div>
                 </div>
                 <div class="fac-footer-block__box__text-about">
-                    <p class="fac-footer__text__title">MINHA CONTA</p>
+                    <h2 class="fac-footer__text__title">MINHA CONTA</h2>
                     <div class="text-info__body">
                         <p>LOGIN/CADASTRA-SE</p>
                         <p>MINHA CONTA</p>
