working on responsive improvements

--- a/usual-way/index.html
+++ b/usual-way/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
     </main>
-    <fac-footer class="fac-footer">
+    <footer class="fac-footer">
         <div class="fac-footer-block">
             <div class="fac-footer-block__box pequeno">
                <img src="img/white-logo.png">
@@ -114,5 +114,5 @@
                 </div>
             </div>
         </div>
-    </fac-footer>
+    </footer>
 </body>
