--- a/usual-way/index.html
+++ b/usual-way/index.html
@@ -21,7 +21,7 @@
     <footer class="fac-footer">
         <div class="fac-footer-block">
             <div class="fac-footer-block__box pequeno">
-               <img src="img/white-logo.png">
+               <img src="img/kazanto-white-logo.png">
                 <p>Inaugurada em 09 de maio de 2015, a Kazanto vem se destacando por trazer para Manaus produtos originais, variados e de qualidade. Na Kazanto, sempre tem novidade chegando!</p>
             </div>
             <div class="fac-footer-block__box grande">
@@ -52,15 +52,15 @@
                     <div class="box__mult-content__content">
                         <h2 class="fac-footer__text__title">Formas de Pagamento</h2>
                         <div class="box__mult-content__media">
-                            <img class="pgt-media__img--md" src="img/pgt-1.png">
-                            <img class="pgt-media__img--lg" src="img/pgt-2.png">
-                            <img class="pgt-media__img--sm" src="img/pgt-3.png">
+                            <img class="pgt-media__img--md" src="img/kzt-pgt-1.png">
+                            <img class="pgt-media__img--lg" src="img/kzt-pgt-2.png">
+                            <img class="pgt-media__img--sm" src="img/kzt-pgt-3.png">
                         </div>
                     </div>
                     <div class="box__mult-content__content">
                         <h2 class="fac-footer__text__title">Segurança</h2>
                         <div class="box__mult-content__media">
-                            <img src="img/logo-letsencrypt.png">
+                            <img class="cert-and-secutity-icon" src="img/pci-certified-icon.png">
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
         <div class="fac-footer-block">
             <div class="fac-footer-block__box">
                 <div class="fac-footer-block__box__social">
-                    <img class="social__logo" src="img/wp-logo.png" />
+                    <img class="social__logo" src="img/kzt-wpp-icon.png" />
                     <div>
                         <div class="social__text">
                             <h2 class="fac-footer__text__title">WHATSAPP</h2>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="fac-footer-block__box__social">
-                    <img class="social__logo" src="img/email-logo.png" />
+                    <img class="social__logo" src="img/kzt-email-icon.png" />
                     <div class="social__text">
                         <h2 class="fac-footer__text__title">EMAIL</h2>
                         <p>SAC@KAZANTO.COM.BR</p>
